--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@formspree/react": "^2.5.1",
+    "firebase": "^10.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
+    "react-toastify": "^10.0.5",
     "react-uuid": "^2.0.0",
     "styled-components": "^6.1.12"
   },
